<resources>
    <string name="app_name">E-scooter Rental</string>
    <string name="action_settings">Settings</string>

    <!-- Common -->
    <string name="error_common_title">Error</string>
    <string name="error_common_button_ok">OK</string>

    <!-- Login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error_login_fail_title">Error</string>
    <string name="error_login_fail_text">Invalid username or password.</string>
    <string name="debug_error_login_success_text">Success</string>

    <!-- Register -->
    <string name="register_title">Register</string>
    <string name="register">Register</string>
    <string name="error_register_fail_title">Error</string>
    <string name="error_register_fail_empty_text">The username or password cannot be empty.</string>
    <string name="error_register_fail_existing_text">This user already exists.</string>
    <string name="alert_register_success_title">Success</string>
    <string name="alert_register_success_text">You have been registered successfully.</string>

    <!-- Scooter List -->
    <string name="scooter_list_fragment_label">Scooter List</string>
    <string name="error_qr_scanner_fail_text">Failed to start the QR code scanner. The resources may still be downloading. Try again in a few minutes.</string>
    <string name="error_qr_bad_format_text">The scanned QR code is not a scooter QR code.</string>
    <string name="error_qr_bad_id_text">The scooter identified by this QR code does not exist.</string>
    <string name="error_location_permissions_denied_text">This app requires location permissions to work correctly.</string>

    <!-- Scooter Detail -->
    <string name="scooter_detail_title">Scooter</string>
    <string name="scooter_detail_location_dummy">Location</string>
    <string name="scooter_detail_button_rent">Rent</string>

    <!-- Scooter Rented Detail -->
    <string name="scooter_rented_detail_title">Rented Scooter</string>
    <string name="scooter_rented_detail_card_how_title">How to Ride</string>
    <string name="scooter_rented_detail_card_how_content">New to our app? Tap here to learn how to ride a scooter.</string>
    <string name="scooter_rented_detail_card_safety_title">Safety and You</string>
    <string name="scooter_rented_detail_card_safety_content">Get to know some crucial safety information.</string>
    <string name="scooter_rented_detail_card_traffic_title">Scooter Tips and Tricks</string>
    <string name="scooter_rented_detail_card_traffic_content">Find out some tips and tricks that you can use when riding a scooter.</string>
    <string name="scooter_rented_detail_button_finish">Finish Renting</string>

    <!-- ABABABAB -->
    <string name="local_video_title">Video</string>
    <string name="local_video_button_play">Play</string>
    <string name="local_video_button_pause">Pause</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scooter_detail">ScooterDetail</string>
</resources>